--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -165,7 +165,7 @@ select {
 
 html {
   font-family: var(--font-primary);
-  font-size: var(--fs-base); /*don't understand why percentage can work as font size*/
+  font-size: var(--fs-base);
   scroll-behavior: smooth;
 }
 
@@ -174,7 +174,7 @@ body {
   background-color: var(--neutral-98);
   font-size: var(--fs-body-medium);
   line-height: var(--lh-body-medium);
-  height: 300vh;
+  height: 300vh; /*make sure to remove this line*/
 }
 
 ::-webkit-scrollbar { width: 12px; }
@@ -247,27 +247,188 @@ body {
 /*-----------------------------------*\
   #REUSED STYLE
 \*-----------------------------------*/
+.material-symbols-rounded {
+  display: block;
+  width: 1em;
+  height: 1em;
+  overflow: hidden;
+  font-variation-settings: 
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24;
+} /*make sure to come back and learn about font variation settings*/
 
-
-
-
+.container {
+  padding-inline: 16px;
+  max-width: 500px;
+  width: 100%;
+  margin-inline: auto;
+}
 
 /*-----------------------------------*\
   #COMPONENT
 \*-----------------------------------*/
+/**
+* BUTTON
+*/
 
+.btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
+  height: 48px;
+  padding-inline: 24px;
+  border-radius: var(--radius-full);
+  max-width: max-content;
+  transition: var(--transition-duration-quick) var(--transition-easing-quick);
+}
 
+.btn-fill {
+  color: var(--neutral-100);
+  background-color: var(--primary-100);
+}
 
+.btn-fill:where(:hover, :focus){
+  background-color: var(--primary-90);
+  box-shadow: var(--shadow-1);
+}
 
+.btn-fill:where(:active, :focus-visible){
+  background-color: var(--primary-80);
+}
+
+.btn-outline {
+  color: var(--primary-100);
+  box-shadow: inset 0 0 0 2px var(--primary-100);
+}
+
+.btn-outline:where(:hover, :focus, :focus-visible){
+  color: var(--neutral-100);
+}
+
+.btn-outline:hover {
+  background-color: var(--primary-100);
+}
+
+.btn-outline:focus {
+  background-color: var(--primary-90);
+}
+
+.btn-outline:where(:active, :focus-visible){
+  background-color: var(--primary-80);
+}
+
+/**
+* ICON BTN
+*/
+
+.icon-btn {
+  width: 40px;
+  height: 40px;
+  display: grid;
+  place-items: center;
+  color: var(--neutral-10);
+  background-color: var(--neutral-100);
+  border-radius: var(--radius-small);
+  box-shadow: var(--shadow-3);
+  transition: var(--transition-duration-quick) var(--transition-easing-quick);
+}
+
+.icon-btn:hover {
+  background-color: var(--neutral-90);
+}
 
 /*-----------------------------------*\
   #HEADER
 \*-----------------------------------*/
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  z-index: 4;
+}
 
+.header.active {
+  height: 72px;
+  background-color: var(--primary-40);
+  animation: slide_in 500ms ease forwards;
+}
 
+@keyframes slide_in{
+  from {transform: translateY(-100%)}
+  to {transform: translateY(0%)};
+}
 
+.header .container {
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+}
 
+.nav-toggle-btn .open,
+.nav-toggle-btn.active .close {
+  display: block;
+}
 
+.nav-toggle-btn .close,
+.nav-toggle-btn.active .open {
+  display: none;
+}
+
+.navbar {
+  position: absolute;
+  top: 85%;
+  right:  16px;
+  background-color: var(--neutral-100);
+  min-width: 260px;
+  padding: 10px;
+  border-radius: var(--radius-large);
+  box-shadow: var(--shadow-1);
+  visibility: hidden;
+  opacity: 0;
+  scale: 0.4; 
+  transition: var(--transition-duration-quick) var(--transition-easing-quick);
+  transform: top right; /*don't understand the point of this line of code*/
+  z-index: 4;
+}
+
+.navbar.active {
+  visibility: visible;
+  opacity: 1; 
+  scale: 1; 
+}
+
+.navbar,
+.nav-list,
+.nav-wrapper {
+  display: grid;
+  gap: 8px;
+}
+
+.nav-link,
+.btn-link {
+  color: var(--neutral-30);
+  padding: 6px 12px;
+  transition: var(--transition-duration-quick) var(--transition-easing-quick); /*don't see point*/
+}
+
+.btn-link {
+  border-block-start: 1px solid var(--neutral-90);
+  padding-block-start: 14px;
+}
+
+:is(.nav-link, .btn-link):is(:hover, :focus-visible),
+.nav-link.active {
+  color: var(--primary-100);
+}
+
+.navbar .btn { min-width: 100%; } /* why does min width: 100% but not width: 100% */
 /*-----------------------------------*\
   #HERO
 \*-----------------------------------*/
